fixed overflow race embed (#593)

--- a/components/RaceWidget/RaceWidget.module.scss
+++ b/components/RaceWidget/RaceWidget.module.scss
@@ -5,10 +5,10 @@
 
 .widgetContainer {
   background: $grey-lightest;
-  width: auto;
+  width: 100%;
 
   main {
-    width: auto;
+    width: 100%;
     padding: 1rem 0;
   }
 }
